config/deluge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge 
spec:
  selector:
    app: deluge
  ports:
  - name: http
    port: 80
    targetPort: 80
