config/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus 
spec:
  selector:
    app: prometheus
  ports:
  - name: http
    port: 80
    targetPort: http
