config/plex-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: plex.d26a.de
    http:
      paths:
      - path: /web
        backend:
          serviceName: plex
          servicePort: 32400
